--- a/index.html
+++ b/index.html
@@ -6,55 +6,78 @@
 <style>
 
 body {
-background-color: ;
-	font-size: 40px;
+background-color: gainsboro;
+	font-size: 24px;
 	text-align: left;
-	font-family: tahoma;
-	 
+	font-family: 'Times New Roman', Times, serif;	 
 	}
+
 	h1 {
-	text-align: left;
-  font-size: 10px;
+	  text-decoration: ;
+    color: yellowgreen;
+  font-size: 50px
 }
-h2 {
-text-align: left;
-  font-size: 6px;
-  font-family: courier;
-}
-h3 {
-text-align: left;
-  font-size: 12px;
+  h2 {
+    font-size: 12px;
+    text-align: left;
+	font-family: tahoma;
+  }
+a {
+  text-decoration: ;
+  color: yellowgreen;
   font-family: tahoma;
 }
-a {
-  color: black;
+a:hover {
+  color: red;
+  background-color: transparent;
+  text-decoration: underline;
 }
-span.a {
-  display: inline;
-  width: 100px;
-  height: 100px;
-  padding: 5px;
+div {
+  margin: 70px;
+}
+.div1 {
+  float: right;
+}
+.img-container {
+  float: right;
+  width: 20%;
+  padding: 15px;
 }
 </style>
 	<body>
-
-	<div style="margin-left:5%;">
-	<br><img src="swoopy.gif" style=" width:400px" title="" alt="swooop">
-	<br></div>
-	<br>
-	<br>
-	
-	<h3>&#9873; <span class="a"><a href="visualart.html">my gallery</a></span> 
-	<br>&#9873; <span class="a"><a href="contactme.html" class="w3-bar-item w3-button">whomst</a></span>
-	<br>
-	<br>projects
-	<br>&#9873; <span class="a"><a href="http://wortdistro.net">wort distro</a></span>
-	<br>&#9873; <span class="a"><a href="https://world-records.bandcamp.com/">world recs</a></span>
-	<br>&#9873; <span class="a"><a href="https://soundcloud.com/g-u-e-s-t-s">guests - soundcloud</a></span>
-	<br>&#9873; <span class="a"><a href="https://guests1.bandcamp.com/">guests - bandcamp</a></span>
-	<br>
-	<br>&#9873; <span class="a"><a href="https://special.fish/jean">special fish</a></span>
-
+    <p style="font-size:50px; font-family: Georgia, serif;">𓆑 bird flying below the ground</p>
+  <div class="img-container"><img src="swoopy.gif" style="width:200px"></div>
+	<div>
+    <h1><a href="visualart.html">pics</a></h1>
+    <h1><a href="film.html">film</a></h1>
+    <!---<h1><a href="mixtapes.html">mixtapes</a></h1>
+    <!---<h1><a href="print.html">printworks</a></h1>
+    <h1><a href="animation.html">animation</a></h1>
+    <h1><a href="sketchbook.html">sketchbook</a></h1>
+  <h1><a href="music.html">music</a></h1>
+  <h1><a href="games.html">games</a></h1>--->
+  <br>
+  <p>whomst?</p>
+  <h2>hi! my name is sean. this is my website.
+  <br>i am an interdisciplinary artist based in the pacific nw.
+  <br>if you would like to reach me <a href="mailto:birdflyingbelowtheground@gmail.com" style="font-size: 12px;
+  text-align: left;font-family: tahoma; color:black">send me an email</a>
+<br>
+<br>thanks for stoppin by!
+<br>
+<br><a href="https://special.fish/jean" style="font-size: 12px;
+text-align: left;font-family: tahoma; color:black"><img src="fish-icon.png" style="width:30px"></a></h3>
+<br>
+  <p>my friends</p>
+  <div class="div1"><img src="house-plant.png" style="width:170px;height:170px;margin-left:15px;" title="just gonna leave this guy here to get some sun..." alt="just gonna leave this guy here to get some sun...">
+  </div><h3><a href="https://leafy.cafe" style="font-size: 12px;
+text-align: left;font-family: tahoma; color:black">leafy.cafe</a>
+<br><a href="https://wortdistro.net" style="font-size: 12px;
+text-align: left;font-family: tahoma; color:black">wort distro</a>
+<br><a href="https://budtapes.bandcamp.com/" style="font-size: 12px;
+text-align: left;font-family: tahoma; color:black">bud tapes</a>
+  </h3>
+</div>
 
 	</body>
 	</html>
