--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@ div {
   <div class="img-container"><img src="swoopy.gif" style="width:200px"></div>
 	<div>
     <h1><a href="visualart.html">pics</a></h1>
-    <h1><a href="film.html">film</a></h1>
-    <!---<h1><a href="mixtapes.html">mixtapes</a></h1>
+    <!---<h1><a href="film.html">film</a></h1>
+    <h1><a href="mixtapes.html">mixtapes</a></h1>
     <!---<h1><a href="print.html">printworks</a></h1>
     <h1><a href="animation.html">animation</a></h1>
     <h1><a href="sketchbook.html">sketchbook</a></h1>
