--- a/visualart.html
+++ b/visualart.html
@@ -2,7 +2,7 @@
 <html>
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="favicon.ico" rel="shortcut icon" type="image/x-generic" />
-	<title>visual art</title>
+	<title>imgs</title>
 <style>
 
 body {
