--- a/news.html
+++ b/news.html
@@ -26,7 +26,7 @@ article {
 <article>
 <br>Hi there! This is my very first update.
 <p>This area will be a place for news about my creative projects as well as just kinda general updates about my life. I do use social media, but i feel worse & worse about it every day. I'd like to see a future where everyone just has their own website.
-<br>This site is 100% free for me. Hence the dot tk domain. If you're interested in how I did that, send me an <a href="contactme.html">email</a> & I'll let you in on the secret.
+	<br>Mostly i just post art & pics on <a href="https://www.instagram.com/the_lookin_machine/">instagram</a>.
 <br>
 <br>Anyways... my cat just had kittens... aaand it's hot in Seattle right now... aaand that is all for now!</p>
 <p>bye bye!</p>
