--- a/room.html
+++ b/room.html
@@ -2,7 +2,7 @@
 <html>
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="favicon.ico" rel="shortcut icon" type="image/x-generic" />
-	<title>P0RTF0LI0 | Sean Canfield</title>
+	<title>R🌕🌕M</title>
 <style>
 body {
 	text-align: center;
@@ -91,8 +91,8 @@ body {
 }
 </style>
 <body>
-<h>PORTFOLI&#9737; | Sean Canfield
-<br> <a href="index.html">↜home</a> ☄  <a href="shop.html">shop</a> ☄ <a href="contact.html">contact</a>
+<h>𓆑
+<br> <a href="index.html">↜home</a>
 </h>
 <center>
 
