--- a/room.html
+++ b/room.html
@@ -89,10 +89,11 @@ body {
         max-width: 100%;
     }
 }
+
 </style>
 <body>
-<h>𓆑
-<br> <a href="index.html">↜home</a>
+	<h1 style="font-size: 20px">𓆑</h1>
+<h> <a href="index.html">↜home</a>
 </h>
 <center>
 
