--- a/room.html
+++ b/room.html
@@ -89,18 +89,29 @@ body {
         max-width: 100%;
     }
 }
-
+h1 {
+	  text-decoration: ;
+    color: yellowgreen;
+  font-size: 50px
+}
+h2 {
+	  text-decoration: ;
+    color: black;
+  font-size: 40px
+}
 </style>
 <body>
-	<h1 style="font-size: 20px">𓆑</h1>
+	<h1>𓆑</h1>
 <h> <a href="index.html">↜home</a>
 </h>
 <center>
 
 <p>
-<B>SUB-BASEMENT ROOM</B></BR>
+<h2><B>SUB-BASEMENT ROOM</B></h2>
 OPENING ~ 2017 ~ JADE'S B-DAY</BR>
-HOUSE OF FAT CAT (PRIVATE HOME), SEATTLE, WA
+PERFORMANCES BY LAUREN MOORE, GUESTS, & AMITY WHORL</BR>
+HOUSE OF FAT CAT (PRIVATE HOME), SEATTLE, WA</p>
+<br>
 <div class="row"> 
   <div class="column">
 <img src="https://i.imgur.com/hVPHHLW.jpg" width="100%">
