--- a/mixtapes.html
+++ b/mixtapes.html
@@ -38,19 +38,23 @@ div {
     </style>
     <body>
         in 2015 i got a car with a tape player & i began making mixtapes for myself. i've kept making them ever since.
-        <br>choosing not based on theme, but only on what i'm currently into, sometimes focusing on some nebulous "mood" or "season",
-        <br>i have found this practice interesting-- creating little slices of a time & a place for myself to return to.
-        <br>recently i've gotten into listening to other peoples' mixes, finding the glimpse it gives me into others' inner-lives &
-        <br>tastes compelling. i thought it would be nice to share my diary-like mixes, to deepen shared understanding of how music weaves
+        <br>choosing not based on genre, but only on what i'm currently into, sometimes focusing on some nebulous "mood" or "season",
+        <br>i have found this practice deeply interesting-- creating little slices of a time & a place to return to.
+        <br>recently i've gotten into listening to other peoples' mixes, finding the glimpse it gives me into others' inner-lives & tastes really inspiring.
+        <br>i thought it would be nice to share my diary-like mixes, to deepen shared understanding of how music weaves
         <br>through our distant lives, bringing them together in connection & communion, even if only for a moment (or 60-90 minutes).
         <br>
         <br>while i share the mixes here in digital form, i think there is something special about the object of the tape itself.
-        <br>so if you'd like a copy of a mix in tape form, send an email to birdflyingbelowtheground@gmail.com with the subject line:
-        <br>"Mixtape" and the name of the mix. Physical tapes are $3 plus shipping ($2.50 within continental US). That covers the cost of
-        <br>the tape, printing the label, and shipping materials. I'm not trying to make a profit, just share something. :⬤)
+        <br>so, if you'd like a copy of a mix in tape form, send an email to birdflyingbelowtheground@gmail.com with the subject line:
+        <br>"Mixtape" and the name of the mix. Physical tapes are $5 plus shipping ($2 within continental US). That covers the cost of
+        <br>the tape, printing the label, and shipping materials. I'm not trying to make a profit, just tryitn to share something. 
+        <br>
+        <br>also, feel free to send your (digital) mixes to birdflyingbelowtheground@gmail.com with the subject "My Mix". i'd be 
+        <br>happy to hear it! just no spotify links please!
+        <br>:⬤)
         
         <div>
-            <h1><a href="">too much blood in my alcohol stream</a></h1>
+            <!---<h1><a href="">too much blood in my alcohol stream</a></h1>
 <h2 style="font-size: 16px">cancer time / early summer 2019
     <br>track listing:
     <br>(A) orange juice - falling & laughing • david bowie - new career in a new town • dingbat superminx - hurt for the hits • john cale 
@@ -59,15 +63,15 @@ div {
     <br>(B) cleaners from venus - living on nerve ends • parquet courts - what color is blood • the soft boys - i wanna destroy you • 
     cleaners from venus - no go • melon painting - firefly meadow • the replacements - someone take the wheel • xmas - the prettiest place 
     (demo) • flatbush - you can have it all
-</h2>
-<h1><a href="">just one long missippi</a></h1>
+</h2>--->
+<h1><a target="_blank" href="justonelongmissippi-cover.jpg"><img src="justonelongmissippi-cover.jpg" style="width:200px"></a> <a href="https://drive.google.com/file/d/1It3qMWGW5X4e-yC6y8FIKFmUA_Msu2A7/view?usp=sharing">just one long missippi</a></h1>
 <h2 style="font-size: 16px">spring / gemini season 2019
 <br>track listing:
 <br>(A) janet kay - silly games • ymo - cue • khruangbin - a calf born in winter • the roches - i fell in love • curtis harding - need your 
 love • ymo - 1000 knives • alton ellis - almost anything • the durutti column - messidor
 <br>(B) gene clark - no other • the riptides - hearts & flowers • rah band - sam the samba man • esg - ufo • phyllis dillon - perfidia • 
 the avalanches & dc berman - a cowboy overflow of the heart</h2>
-<h1><a href="">here comes saturn... again</a></h1>
+<!---<h1><a href="">here comes saturn... again</a></h1>
 <h2 style="font-size: 16px">winter '18/'19
 <br>track listing:
 <br>(A) stereolab - crest (demo) • cocteau twins - iceblink luck • duster - docking the pod • stereolab - mountain instrumental • my bloody 
@@ -94,6 +98,14 @@ cricket • tullycraft - giltter & twang</h2>
 <br>(B) the mountain goats - andrew eldrich is moving back to leeds • kahimi karie & jim o'rourke - do you know the way to san jose • 
 gaze - so early to tell • bob dylan - i shall be released • heavenly - modestic • birthday machine - direction & destination • tiger
 trap - puzzle pieces • gigi - whistling past the graveyard • what's your favorite song?</h2>
+<h1><a href="">at nite at nite at nite</a></h1>
+<h2 style="font-size: 16px">track listing:
+<br>(A) john fahey - on the banks of the owichita • yo la tengo - today is the day • the mountain goats - island garden song • ô paon - st. 
+patronne de rien patoute • silver jews - my pillow is the threshold • marijata - i walk alone • mirah - 100 knives • songs: ohia - blue 
+factory flame
+<br>(B) neu! - im gluek  • woody guthrie - i ain't got no home • the mountain goats - seed song • bjork - crystalline • m. ward - one life 
+away • jonathan richman - at night • mkwaju ensemble - ki motion • michael hurley - blue blue driver • john fahey - medley: road, i come • 
+beck - going nowhere • midori takada - crossing</h2>
             <h1><a href="">all the nice colors</a></h1>
             <h2 style="font-size: 16px;">june 2015 orlando, fl 
             <br>track listing:
@@ -129,7 +141,7 @@ talking heads - naive melody • karl blau - into the nada • scott walker - 30
 <br>(B) pavement - major leagues • daniel johnston & yo la tengo - speeding motorcycle • sebadoh - not too amused • smog - keep some 
 steady friends around • paleo - lighthouse • built to spill - velvet waltz • breeders - saints</h2>
 
-
+--->
 
         </div>
     </body>
