--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ div {
     <h1><a href="visualart.html">pics</a></h1>
     <h1><a href="room.html">room</a></h1>
     <h1><a href="mixtapes.html">mixtapes</a></h1>
+    <h1><a href="print.html">print</a></h1>
     <!---<h1><a href="film.html">film</a></h1>
     
     <!---<h1><a href="print.html">printworks</a></h1>
@@ -74,7 +75,6 @@ text-align: left;font-family: tahoma; color:black"><img src="fish-icon.png" styl
   <div class="div1"><img src="house-plant.png" style="width:170px;height:170px;margin-left:15px;" title="just gonna leave this guy here to get some sun..." alt="just gonna leave this guy here to get some sun...">
   </div><h3><a href="https://leafy.cafe" style="font-size: 12px;
 text-align: left;font-family: tahoma; color:black">leafy.cafe</a>
-
 <br><a href="https://budtapes.bandcamp.com/" style="font-size: 12px;
 text-align: left;font-family: tahoma; color:black">bud tapes</a>
   </h3>
