--- a/print.html
+++ b/print.html
@@ -111,6 +111,17 @@ h2 {
 <br>
 <div class="row"> 
   <div class="column">
+<p style="text-align: left;">these are my screenprints. all are original, unless otherwise noted.
+	<br>i enjoy screenprinting as an arts practice; the process feels like an arcane ritual, working with various green goos and oozes,
+	to harness the power of the sun to cast an image. inevitably a print accumulates some accidents and artefacts, especially in a
+	home setup like mine. these small errors are the gifts of the process and make printing something special in a world that is 
+	evermore crisp, digital, and sanitary. 
+	<br>i am open to taking printing commissions, as long as my small setup can handle your job & suit your needs. :⬤)
+	 <br>
+	 <br>i can be reached about printing or other stuff at birdflyingbelowtheground@gmail.com
+	 <br>
+	 <br>thanks for lookin'
+</p>
 <img src="rangeland1.jpg" width="100%">
 <img src="dontpet1.jpg" width="100%">
 <img src="moomins1.png" width="100%">
