--- a/sketchbook.html
+++ b/sketchbook.html
@@ -78,17 +78,17 @@ img {vertical-align: middle;}
 
         <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img src="sketchbook/sb0.jpg" style="width:100%">
+            <img src="sb0.jpg" style="width:100%">
           </div>
 
         <div class="mySlides fade">
           <div class="numbertext"></div>
-          <img src="sketchbook/sb.png" style="width:100%">
+          <img src="sb.png" style="width:100%">
         </div>
         
         <div class="mySlides fade">
           <div class="numbertext"></div>
-          <img src="sketchbook/sb1.png" style="width:100%">
+          <img src="sb1.png" style="width:100%">
         </div>
         
         <div class="mySlides fade">
