--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@ text-align: left;font-family: tahoma; color:black"><img src="fish-icon.png" styl
 text-align: left;font-family: tahoma; color:black">leafy.cafe</a>
 <br><a href="https://budtapes.bandcamp.com/" style="font-size: 12px;
 text-align: left;font-family: tahoma; color:black">bud tapes</a>
+<br><a href="https://adelbengo.bandcamp.com/album/the-prettiest-place-2" style="font-size: 12px;
+text-align: left;font-family: tahoma; color:black">XMAS</a>
   </h3>
 </div>
 
