--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ div {
     <h1><a href="mixtapes.html">mixtapes</a></h1>
     <h1><a href="print.html">print</a></h1>
     <h1><a href="sketchbook.html">sketchbook</a></h1>
-    <!---<h1><a href="film.html">film</a></h1>
-    <h1><a href="animation.html">animation</a></h1>
+    <h1><a href="film.html">film</a></h1>
+    <!---<h1><a href="animation.html">animation</a></h1>
   <h1><a href="music.html">music</a></h1>
   <h1><a href="games.html">games</a></h1>--->
   <br>
