--- a/film.html
+++ b/film.html
@@ -25,7 +25,8 @@ h2 {
 }
 h3 {
     color: rgb(0, 0, 0);
-  font-size: 16px
+  font-size: 16px;
+text-align: justify;
 }
 h4 {
     margin-top: -66px;
@@ -47,13 +48,21 @@ div {
 .div1 {
   margin: 170px;
   border: 0px;
-  width: 85%;
+  width: 80%;
   padding: 0px;
   text-align: justify;
   margin-top: -50px;
-
-
 }
+.content {
+     background-color;
+    color:;
+    padding-right: 0px;
+    padding-left: 100px;
+    padding-bottom: 40px;
+    text-align:;
+
+    }
+
     </style>
     <body>
         <center><h1>𓆑</h1>
@@ -61,36 +70,46 @@ div {
     <h> <a href="index.html">↜home</a>
     </h>
 </center>
-<div><p style="font-size: 75px">with friends...</p>
+<div class="content"><div><p style="font-size: 75px">with friends...</p>
     <h4>over the years i've helped a few good friends with video projects. 
     <br>so honored to be a part :⬤)</h4></div>
 </p> 
 <div class="div1"><h1>xmas ~ western way 
     <br>(2020)</h1>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Z3yuIjP2XGc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<h3>i have some cameos in this xmas video. i wrote this song a long time ago & it was really wonderful to see adel give it a new life and to be a part of that process.</h3>
+<h3>i have some cameos in this xmas video. i wrote this song a long time ago & it was 
+    <br>really wonderful to see adel give it a new life and to be a part of that process.</h3>
 <h1>"purveyor of lost dreams" 
     <br>short film by mackenzi wakley
 <br>(2020)</h1>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/4677tCafGs8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<h3>i starred in this super 8 film mac made for the georgetown super 8 film fest. they also wrote & played the music for the film. it was really fun to trapse around industrial ruins & see the story form as we went.</h3>
+<h3>i starred in this super 8 film mac made for the georgetown super 8 film fest. 
+    <br>they also wrote & played the music for the film. it was really fun to trapse around 
+    <br>industrial ruins & see the story form as we went.</h3>
 <h1>flying fish cove ~ johnny paper
     <br>(2018)
 </h1>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/P8g3GBP7RIc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<h3>this one was a lot of fun. i basically just wore tight pants & played bass on the track. i believe the idea was to call back to the classic Beverly Hills 90210 opening credits. really funny. i didnt get any reference because i've never watched that show.</h3>
+<h3>this one was a lot of fun. i basically just wore tight pants & played bass on the track. 
+    <br>i believe the idea was to call back to the classic Beverly Hills 90210 opening credits. 
+    <br>really funny. i didnt get any reference because i've never watched that show, but a 
+    <br>fun project to be a part of nonetheless.</h3>
 <h1>flying fish cove ~ manticore
     <br>(2017)
 </h1>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/3kWwbHXZzsc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<h3>i made a few set pieces for this video: the manticore & waves. some scenes were shot in my house & i set up backgrounds
-and lighting. i have a few cameos as a tiger lol & i played bass on the song.</h3>
+<h3>i made a few set pieces for this video: the manticore & waves. some scenes were 
+    <br>shot in my house & i helped set up backgrounds and lighting. i have a few cameos as
+    <br>a tiger (lol) & i played bass on the song.</h3>
 <h1>xmas ~ you can leave me whenever you want 
     <br>(2013)</h1>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/lkT9bTFGBOY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<h3>[CW: suicide] adel & i worked together on this video from her idea of two lovers/friends: one keeps trying to end their life & the other keeps saving them from it.
-there's nothing very graphic in it. we were watching a lot of buster keaton and harold lloyd videos together at the time.
-the style of those films influenced how we approached this dark subject. we are cartoons, in the world of the film, & perhaps in our own worlds too...</h3>
+<h3>[CW: suicide] adel & i worked together on this video from her idea of two 
+    <br>lovers/friends: one keeps trying to end their life & the other keeps saving them from it.
+<br>there's nothing very graphic depicted. we were watching a lot of buster keaton and 
+<br>harold lloyd videos together at the time. the style of those films influenced how we 
+<br>approached this dark subject. 
+<br>we are cartoons, in the world of the film, & perhaps in our own worlds too...</h3>
 <br></div>
 <div><p style="font-size: 75px">my projects</p></div>
 <div class="div1"><h1>wire department ~ 1.2.5 (the beast out of the sea)
@@ -105,6 +124,6 @@ the style of those films influenced how we approached this dark subject. we are 
     <br>(2012)
 </h1>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Rdm3_S4DBjw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
+</div></div>
 </body>
     </html>
