--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ div {
     <p style="font-size:50px; font-family: Georgia, serif;">𓆑 bird flying below the ground</p>
   <div class="img-container"><img src="swoopy.gif" style="width:200px"></div>
 	<div>
+    <h1><a href="music.html">music</a></h1>
     <h1><a href="visualart.html">pics</a></h1>
     <h1><a href="room.html">room</a></h1>
     <h1><a href="mixtapes.html">mixtapes</a></h1>
