--- a/music.html
+++ b/music.html
@@ -2,27 +2,65 @@
 <html>
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="favicon.ico" rel="shortcut icon" type="image/x-generic" />
-	<title>sean's cool web site</title>
+	<title>swoop</title>
 <style>
+
 body {
-	color:;
-	text-align: center;
-    background-color: ;
-}
-h2 {
-    color: #6B6B6B;
-}
-h3 {
-    color: #C4C4C4;
-}
-div.music {
-    overflow: auto;
-	white-space: nowrap;
-}
+background-color: gainsboro;
+	font-size: 24px;
+	text-align: left;
+	font-family: 'Times New Roman', Times, serif;	 
+	}
 
-
+	h1 {
+	  text-decoration: ;
+    color: yellowgreen;
+  font-size: 50px
+}
+  h2 {
+    font-size: 12px;
+    text-align: left;
+	font-family: tahoma;
+  }
+a {
+  text-decoration: ;
+  color: yellowgreen;
+  font-family: tahoma;
+}
+a:hover {
+  color: red;
+  background-color: transparent;
+  text-decoration: underline;
+}
+div {
+  margin: 70px;
+}
+.div1 {
+  float: right;
+}
+.img-container {
+  float: right;
+  width: 20%;
+  padding: 15px;
+}
 </style>
-<body>
-<h1><img src="music1.png"></h1>
-<p> <img src="under-construction.gif">
-</body
+	<body>
+    <p style="font-size:50px; font-family: Georgia, serif;">𓆑 my music</p>
+	<div>
+ 	<br><iframe style="border: 0; width: 350px; height: 350px;" src="https://bandcamp.com/EmbeddedPlayer/album=1502739523/size=large/bgcol=333333/linkcol=0f91ff/minimal=true/transparent=true/" seamless><a href="https://guests1.bandcamp.com/album/fat-cat-residency-demos">fat cat residency demos by guests</a></iframe> 
+ <iframe style="border: 0; width: 350px; height: 350px;" src="https://bandcamp.com/EmbeddedPlayer/album=1337685215/size=large/bgcol=333333/linkcol=fe7eaf/minimal=true/transparent=true/" seamless><a href="https://world-records.bandcamp.com/album/wire-department">Wire Department by Wire Department</a></iframe>
+	 <iframe style="border: 0; width: 350px; height: 350px;" src="https://bandcamp.com/EmbeddedPlayer/album=4266885844/size=large/bgcol=ffffff/linkcol=2ebd35/minimal=true/transparent=true/" seamless><a href="https://guests1.bandcamp.com/album/legacy-out-back">Legacy Out Back by guests</a></iframe> 
+<iframe style="border: 0; width: 350px; height: 350px;" src="https://bandcamp.com/EmbeddedPlayer/album=3290601048/size=large/bgcol=333333/linkcol=e99708/minimal=true/transparent=true/" seamless><a href="https://guests1.bandcamp.com/album/sunday-practice">Sunday Practice by guests</a></iframe>
+<div class="img-container"><a href="index.html"><img src="lil-guy.png" style="width:250px"></a></div>
+
+ <h3>
+  </h3>
+</div>
+
+	</body>
+	</html>
+	
+	
+<!doctype html>
+<html>
+
