--- a/index.html
+++ b/index.html
@@ -46,7 +46,22 @@ div {
 </style>
 	<body>
     <p style="font-size:50px; font-family: Georgia, serif;">𓆑 bird flying below the ground</p>
-  <div class="img-container"><img src="swoopy.gif" style="width:200px"></div>
+  <div><b><p style="font-size:50px;  color: yellowgreen;
+    font-family: tahoma, sans-serif;">the news</p></b>
+    <p style="font-size:25px;  color: rgb(0, 0, 0);
+    font-family: tahoma, sans-serif;">releasing on 9/10/2021:
+    <Br>
+    <br><b><a style="font-size:25px;  color: rgb(255, 102, 0);
+    font-family: tahoma, sans-serif;" href="https://world-records.bandcamp.com/album/wire-department-ii">wire department II</a></b>
+   </p>
+   <iframe style="border: 0; width: 350px; height: 350px;" src="https://bandcamp.com/EmbeddedPlayer/album=1877645152/size=large/bgcol=333333/linkcol=e99708/minimal=true/transparent=true/" seamless><a href="https://world-records.bandcamp.com/album/wire-department-ii">wire department II by wire department</a></iframe>
+  <br>
+  <p style="font-size:20px;  color: rgb(39, 39, 39);
+    font-family: 'Times New Roman', Times, serif;"><i>"it sounds like the instruments have woken up and are trying to play themselves" ~ adel bengo</i>
+<br>
+  <br>on tape & digital, from <a style="font-size:20px;  color: rgb(255, 102, 0);
+  font-family: 'Times New Roman', Times, serif;" href="https://world-records.bandcamp.com">world records</a></p></div>
+    <div class="img-container"><img src="swoopy.gif" style="width:200px"></div>
 	<div>
     <h1><a href="music.html">music</a></h1>
     <h1><a href="visualart.html">pics</a></h1>
