--- a/index.html
+++ b/index.html
@@ -46,10 +46,16 @@ div {
 </style>
 	<body>
     <p style="font-size:50px; font-family: Georgia, serif;">𓆑 bird flying below the ground</p>
-  <div><b><p style="font-size:50px;  color: yellowgreen;
-    font-family: tahoma, sans-serif;">the news</p></b>
+  <div><b><i><p style="font-size:50px;  color: yellowgreen;
+    font-family: tahoma, sans-serif;">the news:</p></i></b>
     <p style="font-size:25px;  color: rgb(0, 0, 0);
-    font-family: tahoma, sans-serif;">releasing on 9/10/2021:
+    font-family: tahoma, sans-serif;">✿ <a style="font-size:25px;  color: rgb(255, 102, 0);
+    font-family: tahoma, sans-serif;" href="kt-archive.html">kitchen tapes radio show
+    <br>
+    <br><img src="kt2.png" style= "width: 350px"></a>
+    </p>
+    <p style="font-size:25px;  color: rgb(0, 0, 0);
+    font-family: tahoma, sans-serif;">✿ releasing on 9/10/2021:
     <Br>
     <br><b><a style="font-size:25px;  color: rgb(255, 102, 0);
     font-family: tahoma, sans-serif;" href="https://world-records.bandcamp.com/album/wire-department-ii">wire department II</a></b>
