--- a/kt-archive.html
+++ b/kt-archive.html
@@ -56,9 +56,9 @@ div {
         <br> every tuesday 5-6pm pdt/pst on cafe racer radio.</i></p>
     <h2>
        <p>10/12/21</p>
-        <p>10/05/21</p>
-        <p>09/28/21</p>
-        <P><a href="kt1.mp3">09/21/21</a></P>
+        <p><a href="https://archive.org/details/kt3_20211005">10/05/21</a></p>
+        <p><a href="https://archive.org/details/kt2-20210928">09/28/21</a></p>
+        <P><a href="https://archive.org/details/kt1_20210921">09/21/21</a></P>
     </h2>
 </body>
 </html>
