--- a/kt-archive.html
+++ b/kt-archive.html
@@ -53,7 +53,7 @@ div {
         <br>~ archive ~
     </h1>
     <p style="font-family: 'Times New Roman', Times, serif; font-size: 18px;"><i>a weekly one-hour internet radio spot i host highlighting diy & unconventional music from around the world.
-        <br> every tuesday 5-6pm pdt/pst on cafe racer radio.</i></p>
+        <br> every tuesday 5-6pm pdt/pst on <a style="text-decoration: underline; color: black; font-family: 'Times New Roman', Times, serif; font-size: 18px;" href="https://www.caferacermusic.com/">cafe racer radio.</a></i></p>
     <h2>
        <p>10/12/21</p>
         <p><a href="https://archive.org/details/kt3_20211005">10/05/21</a></p>
