--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@ text-align: left;font-family: tahoma; color:black">leafy.cafe</a>
 text-align: left;font-family: tahoma; color:black">bud tapes</a>
 <br><a href="https://adelbengo.bandcamp.com/album/the-prettiest-place-2" style="font-size: 12px;
 text-align: left;font-family: tahoma; color:black">XMAS</a>
+<br><a href="https://jordanchesnut.com/" style="font-size: 12px;
+text-align: left;font-family: tahoma; color:black">jordan chestnut</a>
   </h3>
 </div>
 
