--- a/music.html
+++ b/music.html
@@ -45,9 +45,10 @@ div {
 }
 </style>
 	<body>
+		
     <p style="font-size:50px; font-family: Georgia, serif;">𓆑 my music</p>
 	<div>
- 	<br><iframe style="border: 0; width: 350px; height: 350px;" src="https://bandcamp.com/EmbeddedPlayer/album=1502739523/size=large/bgcol=333333/linkcol=0f91ff/minimal=true/transparent=true/" seamless><a href="https://guests1.bandcamp.com/album/fat-cat-residency-demos">fat cat residency demos by guests</a></iframe> 
+ 	<br><iframe style="border: 0; width: 350px; height: 350px;" src="https://bandcamp.com/EmbeddedPlayer/album=1877645152/size=large/bgcol=333333/linkcol=e99708/minimal=true/transparent=true/" seamless><a href="https://world-records.bandcamp.com/album/wire-department-ii">wire department II by wire department</a></iframe> <iframe style="border: 0; width: 350px; height: 350px;" src="https://bandcamp.com/EmbeddedPlayer/album=1502739523/size=large/bgcol=333333/linkcol=0f91ff/minimal=true/transparent=true/" seamless><a href="https://guests1.bandcamp.com/album/fat-cat-residency-demos">fat cat residency demos by guests</a></iframe> 
  <iframe style="border: 0; width: 350px; height: 350px;" src="https://bandcamp.com/EmbeddedPlayer/album=1337685215/size=large/bgcol=333333/linkcol=fe7eaf/minimal=true/transparent=true/" seamless><a href="https://world-records.bandcamp.com/album/wire-department">Wire Department by Wire Department</a></iframe>
 	 <iframe style="border: 0; width: 350px; height: 350px;" src="https://bandcamp.com/EmbeddedPlayer/album=4266885844/size=large/bgcol=ffffff/linkcol=2ebd35/minimal=true/transparent=true/" seamless><a href="https://guests1.bandcamp.com/album/legacy-out-back">Legacy Out Back by guests</a></iframe> 
 <iframe style="border: 0; width: 350px; height: 350px;" src="https://bandcamp.com/EmbeddedPlayer/album=3290601048/size=large/bgcol=333333/linkcol=e99708/minimal=true/transparent=true/" seamless><a href="https://guests1.bandcamp.com/album/sunday-practice">Sunday Practice by guests</a></iframe>
