--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@ background-color: gainsboro;
 	font-size: 24px;
 	text-align: left;
 	font-family: 'Times New Roman', Times, serif;	 
+ overflow-x: scroll;
+ white-space: nowrap;
+ border-style: hidden;
+ border-radius: 0%;
+ border-color:;
+ border-width: 20px;
+ border-bottom: ;
+ border-right: ;
+ margin-right: ;
+ 
 	}
 
 	h1 {
@@ -32,23 +42,46 @@ a:hover {
   background-color: transparent;
   text-decoration: underline;
 }
-div {
-  margin: 70px;
+.div3 {
+  margin-left: 5%;
+  
 }
 .div1 {
   float: right;
 }
+
+.div2 {
+  word-spacing: 30px;
+  margin-right: 50px;
+}
+.divshadow {
+  filter: drop-shadow(-30px -30px 0px orangered);
+  margin-left: 30px;
+  margin-top: 37.5px;
+}
 .img-container {
   float: right;
-  width: 20%;
+  
   padding: 15px;
+}
+p {
+  margin-top: 0em ;
+  margin-bottom: 0em ;
 }
 </style>
 	<body>
+    <div class="divshadow"><img src="IMG_0450.JPG" style="width:500px"></div>
+    <div class="div3"><div class="img-container"><img src="swoopy.gif" style="width:200px;"></div>
+    <br><p style="font-size:22px;">hello, my name is sean. i am an artist, graphic designer, and musician. 
+    <br>this is my website where i share things i'm working on. it is called:</p>
     <p style="font-size:50px; font-family: Georgia, serif;">𓆑 bird flying below the ground</p>
-  <div><b><i><p style="font-size:50px;  color: yellowgreen;
-    font-family: tahoma, sans-serif;">the news:</p></i></b>
-    <p style="font-size:25px;  color: rgb(0, 0, 0);
+    <br>
+    <br>
+  <div><div class="div2"><b><i><p style="font-size:40px;  color: yellowgreen;
+    font-family: tahoma, sans-serif; "><a href="visualart.html">artwork</a>  <a href="music.html">music</a>  <a href="https://www.mixcloud.com/_j_e_a_n_/">radio</a>  <a href="sketchbook.html">sketchbook</a>  <a href="film.html">film</a></p></i></b></div>
+    <br>
+    <a href="visualart.html"><img src="touch.png" style= "width: 350px"> </a><a href="https://www.mixcloud.com/_j_e_a_n_/"><img src="kt2.png" style= "width: 350px"> </a><iframe style="border: 0; width: 350px; height: 350px;" src="https://bandcamp.com/EmbeddedPlayer/album=1877645152/size=large/bgcol=333333/linkcol=e99708/minimal=true/transparent=true/" seamless><a href="https://world-records.bandcamp.com/album/wire-department-ii">wire department II by wire department</a></iframe> 
+    <!---<p style="font-size:25px;  color: rgb(0, 0, 0);
     font-family: tahoma, sans-serif;">✿ <a style="font-size:25px;  color: rgb(255, 102, 0);
     font-family: tahoma, sans-serif;" href="kt-archive.html">kitchen tapes radio show
     <br>
@@ -67,7 +100,7 @@ div {
 <br>
   <br>on tape & digital, from <a style="font-size:20px;  color: rgb(255, 102, 0);
   font-family: 'Times New Roman', Times, serif;" href="https://world-records.bandcamp.com">world records</a></p></div>
-    <div class="img-container"><img src="swoopy.gif" style="width:200px"></div>
+    
 	<div>
     <h1><a href="music.html">music</a></h1>
     <h1><a href="visualart.html">pics</a></h1>
@@ -76,9 +109,9 @@ div {
     <h1><a href="print.html">print</a></h1>
     <h1><a href="sketchbook.html">sketchbook</a></h1>
     <h1><a href="film.html">film</a></h1>
-    <!---<h1><a href="animation.html">animation</a></h1>
+    <h1><a href="animation.html">animation</a></h1>
   <h1><a href="music.html">music</a></h1>
-  <h1><a href="games.html">games</a></h1>--->
+  <h1><a href="games.html">games</a></h1>
   <br>
   <p>whomst?</p>
   <h2>hi! my name is sean. this is my website.
@@ -87,12 +120,18 @@ div {
   text-align: left;font-family: tahoma; color:black">send me an email</a>
 <br>
 <br>thanks for stoppin by!
+<br>--->
+<br>
+<br>
 <br>
 <br><a href="https://special.fish/jean" style="font-size: 12px;
-text-align: left;font-family: tahoma; color:black"><img src="fish-icon.png" style="width:30px"></a></h3>
+text-align: left;font-family: tahoma; color:black"><img src="fish-icon.png" style="width:30px"></a> <a href="mailto:birdflyingbelowtheground@gmail.com" style="color:black;">get in touch</a></h3>
 <br>
-  <p>my friends</p>
-  <div class="div1"><img src="house-plant.png" style="width:170px;height:170px;margin-left:15px;" title="just gonna leave this guy here to get some sun..." alt="just gonna leave this guy here to get some sun...">
+<br>  
+<br>
+<br>  
+<p>my friends</p>
+  <div class="img-container"><img src="house-plant.png" style="width:170px;height:170px;margin-left:15px;" title="just gonna leave this guy here to get some sun..." alt="just gonna leave this guy here to get some sun...">
   </div><h3><a href="https://leafy.cafe" style="font-size: 12px;
 text-align: left;font-family: tahoma; color:black">leafy.cafe</a>
 <br><a href="https://budtapes.bandcamp.com/" style="font-size: 12px;
@@ -102,6 +141,7 @@ text-align: left;font-family: tahoma; color:black">XMAS</a>
 <br><a href="https://jordanchesnut.com/" style="font-size: 12px;
 text-align: left;font-family: tahoma; color:black">jordan chestnut</a>
   </h3>
+</div>
 </div>
 
 	</body>
