--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ p {
 	<body>
     <div class="divshadow"><img src="IMG_0450.JPG" style="width:500px"></div>
     <div class="div3"><div class="img-container"><img src="swoopy.gif" style="width:200px;"></div>
-    <br><p style="font-size:22px;">hello, my name is sean. i am an artist, graphic designer, and musician. 
+    <br><p style="font-size:22px;">hello, my name is jean. i am an artist, graphic designer, and musician. 
     <br>this is my website where i share things i'm working on. it is called:</p>
     <p style="font-size:50px; font-family: Georgia, serif;">𓆑 bird flying below the ground</p>
     <br>
