--- a/visualart.html
+++ b/visualart.html
@@ -10,6 +10,8 @@ body {
 	text-align: left;
 	font-family: tahoma;
     background-color:white ;
+	margin-left:5%
+	
 	 
 	}
 	h1 {
@@ -28,26 +30,40 @@ a {
 
 }
 
+
+.divscrolling { 
+	width: auto;
+  padding: 10px;
+  border: 5px solid gray;
+  margin: 0;
+  overflow-x: scroll;
+ white-space: nowrap;
+}
+
+.divscrolling a {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+  
+}
 </style>
-<div class="w3-sidebar w3-light-grey w3-bar-block" style="width:5%">
+
     <h1 class="w3-bar-item"><a href="index.html">home</a>
     
-    </div>
-	
-    <div style="margin-left:5%">
-		<br>check out the alt text for the title (if it has one)!
-		<br>click any image (except gifs) to see it full size
-		<br><a href="https://www.instagram.com/the_lookin_machine/">{instagram}</a>
-		<br><img src="apr16-peeps.gif" style="width:500px" title="4/16/21" alt="4/16/21"><img src="apr15-cat-walk.gif" style="width:500px" title="4/15/21" alt="4/15/21"><img src="apr14-burn.gif" style="width:500px" title="4/14/21" alt="4/14/21">
-		<br><img src="apr13-melt.gif" style="width:500px" title="4/13/21" alt="4/13/21"><img src="apr12-this-guy.gif" style="width:500px" title="4/12/21" alt="4/12/21"><img src="apr9-drip.gif" style="width:500px" title="4/9/21" alt="4/9/21">
-		<br><img src="apr8-nite-drive.gif" style="width:500px" title="4/8/21" alt="4/8/21"><img src="apr7-sun-lay.gif" style="width:500px" title="4/7/21" alt="4/7/21"><img src="apr6-cute-walk.gif" style="width:500px" title="4/6/21" alt="4/6/21">
-		<br><a target="_blank" href="old-apple-blossom.png"><img src="old-apple-blossom.png" style=" width: 300px" title="" alt=""></a><a target="_blank" href="https://i.imgur.com/qFDujCF.png"><img src="https://i.imgur.com/qFDujCF.png" style="width:300px" title="range life number 1 (2018)" alt="range life number 1 (2018)"></a><a target="_blank" href="https://i.imgur.com/P2Auih7.jpg"><img src="https://i.imgur.com/P2Auih7.jpg" style="width:300px" title="range life number 2 (2018)" alt="range life number 2 (2018)"></a><a target="_blank" href="https://i.imgur.com/WabmlCI.jpg"><img src="https://i.imgur.com/WabmlCI.jpg" style="width:300px" title="range life number 3: the lonely mountain/there are 2 mountains (2018)" alt="range life number 3: the lonely mountain/there are 2 mountains (2018)"></a><a target="_blank" href="https://i.imgur.com/7S3dLyS.jpg"><img src="https://i.imgur.com/7S3dLyS.jpg" style="width:300px" title="range life number 4: when it was dark (2018)" alt="range life number 4: when it was dark (2018)"></a><a target="_blank" href="https://i.imgur.com/U6RM9kM.jpg"><img src="https://i.imgur.com/U6RM9kM.jpg" style="width:300px" title="new mtns (2018)" alt="new mtns (2018)"></a><a target="_blank" href="https://i.imgur.com/XrNvCym.jpg"><img src="https://i.imgur.com/XrNvCym.jpg" style="width:300px" title="mac in summer (2019)" alt="mac in summer (2019)"></a><a target="_blank" href="https://i.imgur.com/sEArQVQ.jpg"><img src="https://i.imgur.com/sEArQVQ.jpg" style="width:300px" title="rain ride (2019)" alt="rain ride (2019)"></a><a target="_blank" href="https://i.imgur.com/DfDIGlC.png"><img src="https://i.imgur.com/DfDIGlC.png" style="width:250px" title="sad tod (2019)" alt="sad tod (2019)"></a><a target="_blank" href="https://i.imgur.com/nid6mkh.png"><img src="https://i.imgur.com/nid6mkh.png" style="width:250px" title="don't cry stupid (2019)" alt="don't cry stupid (2019)"></a><a target="_blank" href="https://i.imgur.com/mJzqA9S.jpg"><img src="https://i.imgur.com/mJzqA9S.jpg" style="width:250px" title="sub-basement room (2017)" alt="sub-basement room (2017)"></a> <a target="_blank" href="https://i.imgur.com/S9NCMFq.jpg"><img src="https://i.imgur.com/S9NCMFq.jpg" style="width:250px" title="range life number 1 - showing (2019)" alt="range life number 1 - showing (2019)"></a><a target="_blank" href="https://i.imgur.com/v4N4E2V.jpg"><img src="https://i.imgur.com/v4N4E2V.jpg" style="width:250px" title="sad tod - photo (2019)" alt="sad tod - photo (2019)"></a><a target="_blank" href="https://i.imgur.com/u1X0Oom.png"><a target="_blank" href="https://i.imgur.com/q5Xvl7I.jpg"><img src="https://i.imgur.com/q5Xvl7I.jpg" style="width:400px" title="boy adrift (2015)" alt="boy adrift (2015)"></a><a target="_blank" href="https://i.imgur.com/aSeopBR.jpg"><img src="https://i.imgur.com/aSeopBR.jpg" style="width:400px" title="the tree (2016)" alt="the tree (2016)"></a><a target="_blank" href="https://i.imgur.com/HuwDy6T.jpg"><img src="https://i.imgur.com/HuwDy6T.jpg" style="width:400px" title="manrico (2018)" alt="manrico (2018)"></a><a target="_blank" href="https://i.imgur.com/0ekSDYo.jpg"><a target="_blank" href="https://i.imgur.com/y68M0zw.jpg"><img src="https://i.imgur.com/y68M0zw.jpg" style="width:400px" title="my name is John (2016)" alt="my name is John (2016)"></a><a target="_blank" href="https://i.imgur.com/qSHGBq7.jpg"><img src="https://i.imgur.com/qSHGBq7.jpg" style="width:300px" title="mtns to the sea (2019)" alt="mtns to the sea (2019)"></a><a target="_blank" href="https://i.imgur.com/lcy6yLq.jpg"><img src="https://i.imgur.com/lcy6yLq.jpg" style="width:300px" title="drinkin a soda (2018)" alt="drinkin a soda (2018)"></a><a target="_blank" href="https://i.imgur.com/naitjPX.jpg"><img src="https://i.imgur.com/naitjPX.jpg" style="width:300px" title="frog cafe (2018)" alt="frog cafe (2018)"></a>
-<a target="_blank" href="https://i.imgur.com/jmi04CU.jpg"><img src="https://i.imgur.com/jmi04CU.jpg" style="width:400px" title="beach party (2018)" alt="beach party (2018)"></a><a target="_blank" href="https://i.imgur.com/zI4c7DW.jpg"><img src="https://i.imgur.com/zI4c7DW.jpg" style="width:300px" title="frog on the road (2018)" alt="frog on the road (2018)">
-<a target="_blank" href="https://i.imgur.com/D3BQrPH.jpg"><img src="https://i.imgur.com/D3BQrPH.jpg" style="width:800px" title="mountain home 2 (2016)" alt="mountain home 2 (2016)"><a target="_blank" href="https://i.imgur.com/aqgyoLI.jpg"><img src="https://i.imgur.com/aqgyoLI.jpg" style="width:400px" title="mountain home 2 - wip (2016)" alt="mountain home 2 - wip (2016)">
-<a target="_blank" href="https://i.imgur.com/A4PpGoI.jpg"><img src="https://i.imgur.com/A4PpGoI.jpg" style="width:300px" title="farmer crow (2020)" alt="farmer crow (2020)"></a><a target="_blank" href="https://i.imgur.com/lmwvpbq.jpg"><img src="https://i.imgur.com/lmwvpbq.jpg" style="width:300px" title="coffee licker (2018)" alt="coffee licker (2018)"></a><a target="_blank" href="https://i.imgur.com/uEl5Hr6.jpg"><img src="https://i.imgur.com/uEl5Hr6.jpg" style="width:300px" title="dog moon (2019)" alt="dog moon (2019)"></a>
+    
+	Art
+    <div class="divscrolling">
+		<br><img src="apr16-peeps.gif" style="height:500px" title="4/16/21" alt="4/16/21"><img src="apr15-cat-walk.gif" style="height:500px" title="4/15/21" alt="4/15/21"><img src="apr14-burn.gif" style="height:500px" title="4/14/21" alt="4/14/21"><img src="apr13-melt.gif" style="height:500px" title="4/13/21" alt="4/13/21"><img src="apr12-this-guy.gif" style="height:500px" title="4/12/21" alt="4/12/21"><img src="apr9-drip.gif" style="height:500px" title="4/9/21" alt="4/9/21">
+		<img src="apr8-nite-drive.gif" style="height:500px" title="4/8/21" alt="4/8/21"><img src="apr7-sun-lay.gif" style="height:500px" title="4/7/21" alt="4/7/21"><img src="apr6-cute-walk.gif" style="height:500px" title="4/6/21" alt="4/6/21">
+		<a target="_blank" href="old-apple-blossom.png"><img src="old-apple-blossom.png" style=" height: 300px" title="" alt=""></a><a target="_blank" href="https://i.imgur.com/qFDujCF.png"><img src="https://i.imgur.com/qFDujCF.png" style="height:500px" title="range life number 1 (2018)" alt="range life number 1 (2018)"></a><a target="_blank" href="https://i.imgur.com/P2Auih7.jpg"><img src="https://i.imgur.com/P2Auih7.jpg" style="height:500px" title="range life number 2 (2018)" alt="range life number 2 (2018)"></a><a target="_blank" href="https://i.imgur.com/WabmlCI.jpg"><img src="https://i.imgur.com/WabmlCI.jpg" style="height:500px" title="range life number 3: the lonely mountain/there are 2 mountains (2018)" alt="range life number 3: the lonely mountain/there are 2 mountains (2018)"></a><a target="_blank" href="https://i.imgur.com/7S3dLyS.jpg"><img src="https://i.imgur.com/7S3dLyS.jpg" style="height:500px" title="range life number 4: when it was dark (2018)" alt="range life number 4: when it was dark (2018)"></a><a target="_blank" href="https://i.imgur.com/U6RM9kM.jpg"><img src="https://i.imgur.com/U6RM9kM.jpg" style="height:500px" title="new mtns (2018)" alt="new mtns (2018)"></a><a target="_blank" href="https://i.imgur.com/XrNvCym.jpg"><img src="https://i.imgur.com/XrNvCym.jpg" style="height:500px" title="mac in summer (2019)" alt="mac in summer (2019)"></a><a target="_blank" href="https://i.imgur.com/sEArQVQ.jpg"><img src="https://i.imgur.com/sEArQVQ.jpg" style="height:500px" title="rain ride (2019)" alt="rain ride (2019)"></a><a target="_blank" href="https://i.imgur.com/DfDIGlC.png"><img src="https://i.imgur.com/DfDIGlC.png" style="height:500px" title="sad tod (2019)" alt="sad tod (2019)"></a><a target="_blank" href="https://i.imgur.com/nid6mkh.png"><img src="https://i.imgur.com/nid6mkh.png" style="height:500px" title="don't cry stupid (2019)" alt="don't cry stupid (2019)"></a><a target="_blank" href="https://i.imgur.com/mJzqA9S.jpg"><img src="https://i.imgur.com/mJzqA9S.jpg" style="height:500px" title="sub-basement room (2017)" alt="sub-basement room (2017)"></a> <a target="_blank" href="https://i.imgur.com/S9NCMFq.jpg"><img src="https://i.imgur.com/S9NCMFq.jpg" style="height:500px" title="range life number 1 - showing (2019)" alt="range life number 1 - showing (2019)"></a><a target="_blank" href="https://i.imgur.com/v4N4E2V.jpg"><img src="https://i.imgur.com/v4N4E2V.jpg" style="height:500px" title="sad tod - photo (2019)" alt="sad tod - photo (2019)"></a><a target="_blank" href="https://i.imgur.com/u1X0Oom.png"><a target="_blank" href="https://i.imgur.com/q5Xvl7I.jpg"><img src="https://i.imgur.com/q5Xvl7I.jpg" style="height:500px" title="boy adrift (2015)" alt="boy adrift (2015)"></a><a target="_blank" href="https://i.imgur.com/aSeopBR.jpg"><img src="https://i.imgur.com/aSeopBR.jpg" style="height:500px" title="the tree (2016)" alt="the tree (2016)"></a><a target="_blank" href="https://i.imgur.com/HuwDy6T.jpg"><img src="https://i.imgur.com/HuwDy6T.jpg" style="height:500px" title="manrico (2018)" alt="manrico (2018)"></a><a target="_blank" href="https://i.imgur.com/0ekSDYo.jpg"><a target="_blank" href="https://i.imgur.com/y68M0zw.jpg"><img src="https://i.imgur.com/y68M0zw.jpg" style="height:500px" title="my name is John (2016)" alt="my name is John (2016)"></a><a target="_blank" href="https://i.imgur.com/qSHGBq7.jpg"><img src="https://i.imgur.com/qSHGBq7.jpg" style="height:500px" title="mtns to the sea (2019)" alt="mtns to the sea (2019)"></a><a target="_blank" href="https://i.imgur.com/lcy6yLq.jpg"><img src="https://i.imgur.com/lcy6yLq.jpg" style="height:500px" title="drinkin a soda (2018)" alt="drinkin a soda (2018)"></a><a target="_blank" href="https://i.imgur.com/naitjPX.jpg"><img src="https://i.imgur.com/naitjPX.jpg" style="height:500px" title="frog cafe (2018)" alt="frog cafe (2018)"></a>
+<a target="_blank" href="https://i.imgur.com/jmi04CU.jpg"><img src="https://i.imgur.com/jmi04CU.jpg" style="height:500px" title="beach party (2018)" alt="beach party (2018)"></a><a target="_blank" href="https://i.imgur.com/zI4c7DW.jpg"><img src="https://i.imgur.com/zI4c7DW.jpg" style="height:500px" title="frog on the road (2018)" alt="frog on the road (2018)">
+<a target="_blank" href="https://i.imgur.com/D3BQrPH.jpg"><img src="https://i.imgur.com/D3BQrPH.jpg" style="height:600px" title="mountain home 2 (2016)" alt="mountain home 2 (2016)"><a target="_blank" href="https://i.imgur.com/aqgyoLI.jpg"><img src="https://i.imgur.com/aqgyoLI.jpg" style="height:500px" title="mountain home 2 - wip (2016)" alt="mountain home 2 - wip (2016)">
+<a target="_blank" href="https://i.imgur.com/A4PpGoI.jpg"><img src="https://i.imgur.com/A4PpGoI.jpg" style="height:500px" title="farmer crow (2020)" alt="farmer crow (2020)"></a><a target="_blank" href="https://i.imgur.com/lmwvpbq.jpg"><img src="https://i.imgur.com/lmwvpbq.jpg" style="height:500px" title="coffee licker (2018)" alt="coffee licker (2018)"></a><a target="_blank" href="https://i.imgur.com/uEl5Hr6.jpg"><img src="https://i.imgur.com/uEl5Hr6.jpg" style="height:500px" title="dog moon (2019)" alt="dog moon (2019)"></a>
+</div><br>
 	<br>
 	<br>
 	<br>
-	<br></div>
 	</body>
 	</html>
