--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@ text-align: left;font-family: tahoma; color:black"><img src="fish-icon.png" styl
 <br>  
 <p>my friends</p>
   <div class="img-container"><img src="house-plant.png" style="width:170px;height:170px;margin-left:15px;" title="just gonna leave this guy here to get some sun..." alt="just gonna leave this guy here to get some sun...">
-  </div><h3><a href="https://leafy.cafe" style="font-size: 12px;
+  </div><h3><a href="http://leafy.cafe" style="font-size: 12px;
 text-align: left;font-family: tahoma; color:black">leafy.cafe</a>
 <br><a href="https://budtapes.bandcamp.com/" style="font-size: 12px;
 text-align: left;font-family: tahoma; color:black">bud tapes</a>
-<br><a href="https://adelbengo.bandcamp.com/album/the-prettiest-place-2" style="font-size: 12px;
+<br><a href="http://adelbengo.bandcamp.com/album/the-prettiest-place-2" style="font-size: 12px;
 text-align: left;font-family: tahoma; color:black">XMAS</a>
-<br><a href="https://jordanchesnut.com/" style="font-size: 12px;
+<br><a href="http://jordanchesnut.com/" style="font-size: 12px;
 text-align: left;font-family: tahoma; color:black">jordan chestnut</a>
   </h3>
 </div>
