--- a/index.html
+++ b/index.html
@@ -36,11 +36,15 @@ a {
   text-decoration: ;
   color: yellowgreen;
   font-family: tahoma;
+ text-decoration: none;
 }
 a:hover {
-  color: red;
-  background-color: transparent;
-  text-decoration: underline;
+  background-color:thistle;
+  text-decoration: none;
+  font-size: 120px;
+}
+a:visited {
+  text-decoration: none;
 }
 .div3 {
   margin-left: 5%;
@@ -51,7 +55,7 @@ a:hover {
 }
 
 .div2 {
-  word-spacing: 30px;
+  word-spacing: 60px;
   margin-right: 50px;
 }
 .divshadow {
@@ -68,20 +72,101 @@ p {
   margin-top: 0em ;
   margin-bottom: 0em ;
 }
+.divroom {
+  filter: drop-shadow(-15px 9px 0px rgb(255, 69, 0));
+  margin-left: 30px;
+  margin-top: 37.5px;
+}
+img.emojione {
+  // Override any img styles to ensure Emojis are displayed inline
+  margin: 0px !important;
+  display: inline !important;
+
+  height: auto;
+  width: 50px;
+}
+span.emoji {
+  font-size: 69px;
+  vertical-align: middle;
+  line-height: 2;
+}
+p#wrong-test {
+  border-top: ;
+  border-bottom: ;
+  display: inline-block;
+}
+.container {
+  position: relative;
+  width: 50%;
+}
+
+.image {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition:none;
+  background-color: ;
+}
+
+.container:hover .overlay {
+  opacity: 1;
+}
+
+.text {
+  font-family: 'Times New Roman', Times, serif;
+  font-style:oblique;
+  color: rgb(252, 41, 87);
+  font-size: 80px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
 </style>
 	<body>
-    <div class="divshadow"><img src="IMG_0450.JPG" style="width:500px"></div>
+    <div class="container">
+    <img src="touch.png" class="image" style= "width: 800px; height: 400px;">
+    <div class="overlay">
+    <div class="text">i <3 the internet!!!</div>
+    </div>
+  </div>
+    <p style="font-size:80px; font-family: Georgia, serif;">𓆑 bird flying below the ground</p>
     <div class="div3"><div class="img-container"><img src="swoopy.gif" style="width:200px;"></div>
-    <br><p style="font-size:22px;">hello, my name is jean. i am an artist, graphic designer, and musician. 
-    <br>this is my website where i share things i'm working on. it is called:</p>
-    <p style="font-size:50px; font-family: Georgia, serif;">𓆑 bird flying below the ground</p>
-    <br>
-    <br>
-  <div><div class="div2"><b><i><p style="font-size:40px;  color: yellowgreen;
-    font-family: tahoma, sans-serif; "><a href="https://www.dandelionroot.org/">dandelion root</a> <a href="visualart.html">artwork</a>  <a href="music.html">music</a>  <a href="https://www.mixcloud.com/_j_e_a_n_/">radio</a>  <a href="sketchbook.html">sketchbook</a>  <a href="film.html">film</a></p></i></b></div>
-    <br>
-    <a href="visualart.html"><img src="touch.png" style= "width: 350px"> </a><a href="https://www.mixcloud.com/_j_e_a_n_/"><img src="kt2.png" style= "width: 350px"> </a><iframe style="border: 0; width: 350px; height: 350px;" src="https://bandcamp.com/EmbeddedPlayer/album=1877645152/size=large/bgcol=333333/linkcol=e99708/minimal=true/transparent=true/" seamless><a href="https://world-records.bandcamp.com/album/wire-department-ii">wire department II by wire department</a></iframe> 
-    <!---<p style="font-size:25px;  color: rgb(0, 0, 0);
+    <br><p style="font-size:12px;"><div class="divshadow"><img src="IMG_0450.JPG" style="width:233px"></div>hello, my name is jean. i am an artist, graphic designer, and musician. 
+    <br>this is my website where i share things i'm working on.</p>
+
+<br>
+<br>
+<br>  
+<br>
+<br> 
+ <div class="div2"><p style="font-family: 'Times New Roman', Times, serif;">
+  <div class="divroom"><p id="wrong-test"><span class="emoji">
+  <a href="https://www.dandelionroot.org/">👕</a> 
+  <a href="visualart.html">🎨</a>  
+  <a href="music.html">👩‍🎤</a>  
+  <a href="https://www.mixcloud.com/_j_e_a_n_/">📻</a>  
+  <a href="sketchbook.html">📓</a> 
+  <a href="mailto:birdflyingbelowtheground@gmail.com">💌</a>  
+  <a href="film.html"></a>
+  </a></span></p></p></div></div>
+    
+    <!---<a href="visualart.html"></a><a href="https://www.mixcloud.com/_j_e_a_n_/"><img src="kt2.png" style= "width: 350px"> </a><iframe style="border: 0; width: 350px; height: 350px;" src="https://bandcamp.com/EmbeddedPlayer/album=1877645152/size=large/bgcol=333333/linkcol=e99708/minimal=true/transparent=true/" seamless><a href="https://world-records.bandcamp.com/album/wire-department-ii">wire department II by wire department</a></iframe> 
+    <p style="font-size:25px;  color: rgb(0, 0, 0);
     font-family: tahoma, sans-serif;">✿ <a style="font-size:25px;  color: rgb(255, 102, 0);
     font-family: tahoma, sans-serif;" href="kt-archive.html">kitchen tapes radio show
     <br>
@@ -121,17 +206,16 @@ p {
 <br>
 <br>thanks for stoppin by!
 <br>--->
+
 <br>
 <br>
 <br>
-<br><a href="https://special.fish/jean" style="font-size: 12px;
-text-align: left;font-family: tahoma; color:black"><img src="fish-icon.png" style="width:30px"></a> <a href="mailto:birdflyingbelowtheground@gmail.com" style="color:black;">get in touch</a></h3>
 <br>
 <br>  
 <br>
 <br>  
 <p>my friends</p>
-  <div class="img-container"><img src="house-plant.png" style="width:170px;height:170px;margin-left:15px;" title="just gonna leave this guy here to get some sun..." alt="just gonna leave this guy here to get some sun...">
+  <div class="img-container"><a href="https://special.fish/jean"><img src="house-plant.png" style="width:170px;height:170px;margin-left:15px;" title="just gonna leave this guy here to get some sun..." alt="just gonna leave this guy here to get some sun..."></a>
   </div><h3><a href="http://leafy.cafe" style="font-size: 12px;
 text-align: left;font-family: tahoma; color:black">leafy.cafe</a>
 <br><a href="https://budtapes.bandcamp.com/" style="font-size: 12px;
