--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ ul {
   </div>
   </header>	
  email me : birdflyingbelowtheground@gmail.com
-<br><a href="guests1.bandcamp.com">bandcamp</a>
+<br><a href="https://guests1.bandcamp.com">bandcamp</a>
 <br><a href="https://www.instagram.com/the_lookin_machine/">instagram</a>
 <br>
     
