--- a/about.html
+++ b/about.html
@@ -84,9 +84,10 @@ ul {
 <img src="pic.jpeg" height="400px">
   </div>
   </header>	
-  <br>my name is jean canfield. this website serves as a portfolio & archive for my work.
+  <br>my name is jean canfield. this website is a portfolio & archive for my work.
   <br>other than my visual art & music practices, i run a small experimental & rock music label called <a href="https://tapesscree.bandcamp.com">tapes scree.</a>
-  <br>i am currently living in seattle, wa.
+  <br>am currently living in seattle, wa.
+<br>reach me at birdflyingbelowtheground@gmail.com
   <p><a href=index.html><< back</a></p>
     
 
