--- a/work.html
+++ b/work.html
@@ -128,6 +128,7 @@ h1 {
 <br>scroll to the right >>> hover over an image to see the title (alt text) ... click image to see a larger size in a new tab
 <br><h1>printwork</h1>
   <div class="divscrolling">
+    <a target="_blank" href="art/hjol.jpg"><img src="art/hjol.jpg" style="height:500px" title="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22" alt="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22"></a>
     <a target="_blank" href="art/print-anarquista.JPG"><img src="art/print-anarquista.JPG" style="height:500px" title="anarquista (june 2022)" alt="anarquista (june 2022)"></a>
     <a target="_blank" href="art/print-applebug.jpg"><img src="art/print-applebug.jpg" style="height:500px" title="applebug (apr 2022)" alt="applebug (apr 2022)"></a>
     <a target="_blank" href="art/print-genesis.jpg"><img src="art/print-genesis.jpg" style="height:500px" title="genesis (march 2022)" alt="genesis (march 2022)"></a>
@@ -145,6 +146,9 @@ h1 {
   </div>
   <br><h1>flyers</h1>
   <div class="divscrolling">
+    <a target="_blank" href="art/hjol1.jpg"><img src="art/hjol1.jpg" style="height:500px" title="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22" alt="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22"></a>
+    <a target="_blank" href="art/hjol2.jpg"><img src="art/hjol2.jpg" style="height:500px" title="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22" alt="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22"></a>
+    <a target="_blank" href="art/hjol3.jpg"><img src="art/hjol3.jpg" style="height:500px" title="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22" alt="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22"></a>
     <a target="_blank" href="art/flyer-thunderwerld.png"><img src="art/flyer-thunderwerld.png" style="height:500px" title="thunderwerld / burls / izaac mellow // house of fat cat march 16th (2019)" alt="thunderwerld / burls / izaac mellow // house of fat cat march 16th (2019)"></a>    
     <a target="_blank" href="art/flyer-anika-fullsize.png"><img src="art/flyer-anika-fullsize.png" style="height:500px" title="anika / mt.fog // vera project may 20th (2022)" alt="anika / mt.fog // vera project may 20th (2022)"></a>    
     <a target="_blank" href="art/flyer-dhscott.png"><img src="art/flyer-dhscott.png" style="height:500px" title="d(akota) h(all) scott / ancient forest / guests // haus of fat cat march 14th (2022)" alt="d(akota) h(all) scott / ancient forest / guests // haus of fat cat march 14th (2022)"></a>    
