--- a/work.html
+++ b/work.html
@@ -128,7 +128,7 @@ h1 {
 <br>scroll to the right >>> hover over an image to see the title (alt text) ... click image to see a larger size in a new tab
 <br><h1>printwork</h1>
   <div class="divscrolling">
-    <a target="_blank" href="art/hjol.jpg"><img src="art/hjol.jpg" style="height:500px" title="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22" alt="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22"></a>
+    <a target="_blank" href="art/hjol.JPG"><img src="art/hjol.JPG" style="height:500px" title="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22" alt="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22"></a>
     <a target="_blank" href="art/print-anarquista.JPG"><img src="art/print-anarquista.JPG" style="height:500px" title="anarquista (june 2022)" alt="anarquista (june 2022)"></a>
     <a target="_blank" href="art/print-applebug.jpg"><img src="art/print-applebug.jpg" style="height:500px" title="applebug (apr 2022)" alt="applebug (apr 2022)"></a>
     <a target="_blank" href="art/print-genesis.jpg"><img src="art/print-genesis.jpg" style="height:500px" title="genesis (march 2022)" alt="genesis (march 2022)"></a>
