--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@ ul {
   font-size:46px;
   font-family: Georgia, serif;
 }
+.h1{
+  font-size: 20px;
+}
 </style>
 
 <body>
@@ -95,8 +98,17 @@ ul {
 <br><a href="https://guests1.bandcamp.com">bandcamp</a>
 <br><a href="https://www.instagram.com/the_lookin_machine/">instagram</a>
 <br>
-    
-
+<br>
+    <p><i>News!</i>
+      <br>
+      <br>(9/28/22)
+    <br>out now on <a href="http:/tapesscree.bandcamp.com">tapes scree</a>: "am", an album by guests, my main music project.
+    <br>marking a departure from the debut guests offering, "legacy, out back" which shunned all amplification in favor of exploring the power of the human voice,
+    <br>this album embraces the electric whole-heartedly as guitars squeal and distortion washes over the mix like a wave breaking. 
+    <br>interspersed are momentary callbacks to guests earlier days -- folky interludes painting a picture of our narrator alone in nature,
+    <br>but that picture rips and tears dropping the listener through a jagged opening to god-knows-where.
+    <br><a href="https://guests1.bandcamp.com/album/am">>>>listen here<<<</a>
+  </p>
 </div>
 
 	</body>
