--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@ ul {
 <br>
     <p><i>News!</i>
       <br>
+      <br>(11/1/22)
+      <br>now accepting commissions for flyers! see my <a href="work.html">work</a> section or check out my instagram for previous examples. 
+      <br>i am looking to expand to my portfolio and capping my fee at $40. screenprinted posters (11x17") of your flyer are also possible,
+      <br>for additional money. email me or send me a message on instagram to talk details. at least one week turnaround please. 
+      <br>
       <br>(9/28/22)
     <br>out now on <a href="http:/tapesscree.bandcamp.com">tapes scree</a>: "am", an album by guests, my main music project.
     <br>marking a departure from the debut guests offering, "legacy, out back" which shunned all amplification in favor of exploring the power of the human voice,
