--- a/work.html
+++ b/work.html
@@ -113,22 +113,37 @@ h1 {
     bird flying below the ground <div class="img-container"><img src="swoopy.gif" style="width:200px;"></div>
     
       <ul class="nav">
-  <li>
+        <li>
+          <button><a href="index.html">news</a></button>
+          </li>
+        <li>
       <button><a href="about.html">about</a></button></li> 
-  <li>
-    <button><a href="work.html">work</a></button>
-    </li>
   </div>
   </header>	
  email me : birdflyingbelowtheground@gmail.com
 <br><a href="https://guests1.bandcamp.com">bandcamp</a>
 <br><a href="https://www.instagram.com/the_lookin_machine/">instagram</a></div>
 <br>
+<br><b>commission me to make a flyer! email me for details!</b>
 <br>
 <br>scroll to the right >>> hover over an image to see the title (alt text) ... click image to see a larger size in a new tab
+<br><h1>flyers</h1>
+<div class="divscrolling">
+  <a target="_blank" href="art/hjol1.jpg"><img src="art/hjol1.jpg" style="height:500px" title="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22" alt="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22"></a>
+  <a target="_blank" href="art/hjol2.jpg"><img src="art/hjol2.jpg" style="height:500px" title="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22" alt="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22"></a>
+  <a target="_blank" href="art/hjol3.jpg"><img src="art/hjol3.jpg" style="height:500px" title="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22" alt="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22"></a>
+  <a target="_blank" href="art/flyer-thunderwerld.png"><img src="art/flyer-thunderwerld.png" style="height:500px" title="thunderwerld / burls / izaac mellow // house of fat cat march 16th (2019)" alt="thunderwerld / burls / izaac mellow // house of fat cat march 16th (2019)"></a>    
+  <a target="_blank" href="art/flyer-anika-fullsize.png"><img src="art/flyer-anika-fullsize.png" style="height:500px" title="anika / mt.fog // vera project may 20th (2022)" alt="anika / mt.fog // vera project may 20th (2022)"></a>    
+  <a target="_blank" href="art/flyer-dhscott.png"><img src="art/flyer-dhscott.png" style="height:500px" title="d(akota) h(all) scott / ancient forest / guests // haus of fat cat march 14th (2022)" alt="d(akota) h(all) scott / ancient forest / guests // haus of fat cat march 14th (2022)"></a>    
+  <a target="_blank" href="art/flyer-juste.png"><img src="art/flyer-just.png" style="height:500px" title="just / guests / la sonora clandestina / colle // haus of fat cat nov 8th (2019)" alt="just / guests / la sonora clandestina / colle // haus of fat cat nov 8th (2019)"></a>    
+  <a target="_blank" href="art/flyer-victorylounge.png"><img src="art/flyer-victorylounge.png" style="height:500px" title="tincho / boat race weekend / happy heartbreak / flying fish cove // victory lounge may 6th (2017)" alt="tincho / boat race weekend / happy heartbreak / flying fish cove // victory lounge may 6th (2017)"></a>    
+  <a target="_blank" href="art/flyer-guestsalbumrelease.png"><img src="art/flyer-guestsalbumrelease.png" style="height:500px" title="guests ('Legacy, Out Back' album release show) / drama bahmama / pigtails // may 25th (2019)" alt="guests ('Legacy, Out Back' album release show) / drama bahmama / pigtails // may 25th (2019)"></a>    
+  <a target="_blank" href="art/flyer-hobbithole.jpg"><img src="art/flyer-hobbithole.jpg" style="height:500px" title="strawberry mountain / rowan mcquire / guests // hobbit hole june 29th (2018)" alt="strawberry mountain / rowan mcquire / guests // hobbit hole june 29th (2018)"></a>    
+  <a target="_blank" href="art/flyer-generifus.png"><img src="art/flyer-generifus.png" style="height:500px" title="generifus / 129,600 / guests // the woodland theatre june 9th (2018)" alt=""></a>   
+</div>
 <br><h1>printwork</h1>
   <div class="divscrolling">
-    <a target="_blank" href="art/hjol.JPG"><img src="art/hjol.JPG" style="height:500px" title="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22" alt="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22"></a>
+    <a target="_blank" href="art/hjol.jpg"><img src="art/hjol.jpg" style="height:500px" title="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22" alt="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22"></a>
     <a target="_blank" href="art/print-anarquista.JPG"><img src="art/print-anarquista.JPG" style="height:500px" title="anarquista (june 2022)" alt="anarquista (june 2022)"></a>
     <a target="_blank" href="art/print-applebug.jpg"><img src="art/print-applebug.jpg" style="height:500px" title="applebug (apr 2022)" alt="applebug (apr 2022)"></a>
     <a target="_blank" href="art/print-genesis.jpg"><img src="art/print-genesis.jpg" style="height:500px" title="genesis (march 2022)" alt="genesis (march 2022)"></a>
@@ -143,20 +158,6 @@ h1 {
     <a target="_blank" href="https://i.imgur.com/y68M0zw.jpg"><img src="https://i.imgur.com/y68M0zw.jpg" style="height:500px" title="my name is John (2016)" alt="my name is John (2016)"></a>
     <a target="_blank" href="https://i.imgur.com/qSHGBq7.jpg"><img src="https://i.imgur.com/qSHGBq7.jpg" style="height:500px" title="mtns to the sea (2019)" alt="mtns to the sea (2019)"></a>
     <a target="_blank" href="https://i.imgur.com/uEl5Hr6.jpg"><img src="https://i.imgur.com/uEl5Hr6.jpg" style="height:500px" title="dog moon (2019)" alt="dog moon (2019)"></a>
-  </div>
-  <br><h1>flyers</h1>
-  <div class="divscrolling">
-    <a target="_blank" href="art/hjol1.jpg"><img src="art/hjol1.jpg" style="height:500px" title="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22" alt="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22"></a>
-    <a target="_blank" href="art/hjol2.jpg"><img src="art/hjol2.jpg" style="height:500px" title="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22" alt="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22"></a>
-    <a target="_blank" href="art/hjol3.jpg"><img src="art/hjol3.jpg" style="height:500px" title="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22" alt="horse jumper of love | strange ranger | cryogyser @ vera project 7/29/22"></a>
-    <a target="_blank" href="art/flyer-thunderwerld.png"><img src="art/flyer-thunderwerld.png" style="height:500px" title="thunderwerld / burls / izaac mellow // house of fat cat march 16th (2019)" alt="thunderwerld / burls / izaac mellow // house of fat cat march 16th (2019)"></a>    
-    <a target="_blank" href="art/flyer-anika-fullsize.png"><img src="art/flyer-anika-fullsize.png" style="height:500px" title="anika / mt.fog // vera project may 20th (2022)" alt="anika / mt.fog // vera project may 20th (2022)"></a>    
-    <a target="_blank" href="art/flyer-dhscott.png"><img src="art/flyer-dhscott.png" style="height:500px" title="d(akota) h(all) scott / ancient forest / guests // haus of fat cat march 14th (2022)" alt="d(akota) h(all) scott / ancient forest / guests // haus of fat cat march 14th (2022)"></a>    
-    <a target="_blank" href="art/flyer-juste.png"><img src="art/flyer-just.png" style="height:500px" title="just / guests / la sonora clandestina / colle // haus of fat cat nov 8th (2019)" alt="just / guests / la sonora clandestina / colle // haus of fat cat nov 8th (2019)"></a>    
-    <a target="_blank" href="art/flyer-victorylounge.png"><img src="art/flyer-victorylounge.png" style="height:500px" title="tincho / boat race weekend / happy heartbreak / flying fish cove // victory lounge may 6th (2017)" alt="tincho / boat race weekend / happy heartbreak / flying fish cove // victory lounge may 6th (2017)"></a>    
-    <a target="_blank" href="art/flyer-guestsalbumrelease.png"><img src="art/flyer-guestsalbumrelease.png" style="height:500px" title="guests ('Legacy, Out Back' album release show) / drama bahmama / pigtails // may 25th (2019)" alt="guests ('Legacy, Out Back' album release show) / drama bahmama / pigtails // may 25th (2019)"></a>    
-    <a target="_blank" href="art/flyer-hobbithole.jpg"><img src="art/flyer-hobbithole.jpg" style="height:500px" title="strawberry mountain / rowan mcquire / guests // hobbit hole june 29th (2018)" alt="strawberry mountain / rowan mcquire / guests // hobbit hole june 29th (2018)"></a>    
-    <a target="_blank" href="art/flyer-generifus.png"><img src="art/flyer-generifus.png" style="height:500px" title="generifus / 129,600 / guests // the woodland theatre june 9th (2018)" alt=""></a>   
   </div>
 <br><h1>drawing</h1>
   <div class="divscrolling">
